fixed css styling so that 140 character tweet didn't break the website

--- a/public/sass/layout.scss
+++ b/public/sass/layout.scss
@@ -61,6 +61,7 @@ body {
   main {
     width: 65%;
     margin: 0 2em 0 2em;
+    min-width: 40%;
   }
   .avatar-pic {
     height: 100%;
